# cns-control

./: pyproject.toml  requirements.txt
src/cns_control/: autofocus.py  calibration.py  utils.py
tests/: test_grid_point_selections.py  test_lightweight_imports.py
