[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cns_control"
dynamic = ["version"]
description = 'CNS control software for spontaneous Raman microspectroscopy'
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Jason Yu", email = "your-actual-email@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "matplotlib",
  "numpy",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "tqdm",
  "xarray",
]

[project.optional-dependencies]
napari = [
  "napari",
  "napari-broadcastable-points>=0.2.0",
  "raman-mda-engine",
]
hardware = [
  "nidaqmx",
  "pymmcore-plus",
]
tracking = [
  "raman-mda-engine[tracking]",
]

[project.urls]
Documentation = "https://github.com/JasonYu1/cns_control#readme"
Issues = "https://github.com/JasonYu1/cns_control/issues"
Source = "https://github.com/JasonYu1/cns_control"

[tool.hatch.version]
path = "src/cns_control/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cns_control tests}"

[tool.coverage.run]
source_pkgs = ["cns_control", "tests"]
branch = true
parallel = true
omit = [
  "src/cns_control/__about__.py",
]

[tool.coverage.paths]
cns_control = ["src/cns_control", "*/cns-control/src/cns_control"]
tests = ["tests", "*/cns-control/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
